FIX: Topbar expanded view is now visible on mobile

--- a/src/components/TopBar/topbar.css
+++ b/src/components/TopBar/topbar.css
@@ -12,6 +12,7 @@ body {
   width: 100%;
   background-color: #4d4d4d;
   position: fixed;
+  z-index: 1;
 }
 
 .nav > .nav-header {
